# DevPulse

./: .gitignore  docker-compose.yml  init.sql  requirements.txt
backend/: alembic.ini  main.py  pyproject.toml  pytest.ini  requirements-db.txt
backend/Alembic/: env.py
backend/Alembic/versions/: 658faa32705f_initial_schema.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  security.py
backend/app/dependencies/: __init__.py  auth.py  pagination.py
backend/app/models/: __init__.py  base.py  celebration_entry.py  collaboration_request.py  comment.py  milestone.py  notification.py  project.py  user.py
backend/app/routers/: auth.py  collaborations.py  comments.py  feed.py  milestones.py  projects.py  users.py  wall.py
backend/app/schemas/: auth.py  celebration_entry.py  collaboration_request.py  comment.py  milestone.py  notification.py  project.py  user.py
backend/app/services/: auth_service.py  feed_service.py  notification_service.py  project_service.py  storage_service.py  user_service.py
backend/app/websocket/: events.py  manager.py
backend/tests/api/: README.md  conftest.py  test_auth.py  test_collaborations.py  test_comments.py  test_endpoints.py  test_feed.py  test_milestones.py  test_projects.py  test_security.py  test_services.py  test_users.py  test_wall.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: auth.js  client.js  collaborations.js  comments.js  index.js  notifications.js  projects.js  users.js  wall.js
tests/api/: confest.py
(+51 files in other folders)
